[tool.poetry]
name = "ixh24-testing"
version = "0.1.0"
description = ""
authors = ["Frollamma <fral01@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xrpl-py = "^3.0.0"
ipykernel = "^6.29.5"
cryptoconditions = "^0.8.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-dotenv = "^1.0.1"
mailjet-rest = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
